// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component should render correctly 1`] = `
<View
  style={
    [
      {},
      {},
      [
        undefined,
        undefined,
        {},
        undefined,
      ],
    ]
  }
/>
`;

exports[`CardContent Component should render correctly 1`] = `
<View
  style={
    [
      {},
      {},
      {
        "padding": 10,
      },
    ]
  }
/>
`;

exports[`CardHeader Component should render correctly 1`] = `
<View
  style={
    [
      {},
      {},
      [
        undefined,
        {},
        undefined,
      ],
    ]
  }
/>
`;
